# knossos

./: .appveyor.yml  .appveyor_build.sh  .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  .travis_build.sh  CMakeLists.txt  ChangeLog.txt  CustomLibraryLocations.cmake  GUIConstants.h  Hashtable.cpp  LICENSE.txt  Makefile  Plattform.h  QNAMHttpTransportFactory.cpp  QNAMHttpTransportFactory.h  README.md  Release Notes.txt  ReleaseNotes.txt  ReleaseNotes3_4.txt  Resources.qrc  _add_manifest.bat  _manifest.txt  arrow  arrow2  brainmaps.cpp  brainmaps.h  buildinfo.cmake  buildinfo.cpp.in  buildinfo.h  buildinfo.h.in  changelog.md  changelog_v4.1.txt  changelog_v4.txt  client.c  client.cpp  client.h  color4F.cpp  (+171 more)
.objs/: knossos.res
CMake/Modules/: FindQuaZip.cmake  FindSnappy.cmake
agar-patches/: editable.c.patch  win32only_core.c.patch
annotation/: annotation.cpp  annotation.h  file_io.cpp  file_io.h
ci/: appveyor_build.sh  build_linux.sh  build_linux_deps.sh  build_macos.sh  build_macos_PythonQt.sh  build_windows.sh  build_windows_deps.sh  docker_edit.sh  docker_push.sh  travis_build.sh
cmake/Modules/: FindQuaZip.cmake  FindSnappy.cmake  FindTurboJPEG.cmake
cmake/modules/: FindPyQt5.cmake  FindPyQt5.py  FindSIP.cmake  SIPMacros.cmake
decorators/: mainwindowdecorator.cpp  mainwindowdecorator.h  nodelistdecorator.h  skeletondecorator.cpp  skeletondecorator.h  skeletonizerdecorator.cpp  skeletonizerdecorator.h  treelistdecorator.cpp  treelistdecorator.h
doc/: collection.qhc  collection.qhcp  doc.qch  doc.qhp  documentation.html
ftplib/: ftplib.c  ftplib.h
installer/: AppRun  HyperlinkTheme.wxl  HyperlinkTheme.xml  KNOSSOS-junest.desktop  KNOSSOS.yml  bundle.wsx  bundle.wxs  copy_linked_libraries.bash  create-deb.sh  create-installer.sh  create-nightly-deb.sh  create_appimage.sh  install.iss  install32.iss  install64.iss  knossos.desktop  knossos.wxs  package-size.sh  test.rtf  travis_linux_deploy.sh
installer/aur/: PKGBUILD  aur.sh  aur4 ssh git.sh  aur4 update.sh  knossos-team_id_rsa.pub  knossos.desktop
installer/linux/: setup.sh
installer/osx/: setup.sh
installer/wix/: HyperlinkTheme.xml  bundle.wxs  create-installer.sh  knossos.wxs
knossos/: arrow  client.cpp  eventmodel.cpp  eventmodel.h  functions.cpp  knossos-global.h  knossos.pro  patch.cpp  patch.h  renderer.h  sha256.h  sleeper.h
knossos/agar-patches/: console.c.patch  menu.c.patch
knossos/decorators/: skeletonizerdecorator.cpp
knossos/doc/: documentation.html
knossos/openjpeg/: cio.h  openjpeg.h  opj_getopt.c  raw.c  tcd.c
knossos/test/: testorthogonalviewport.cpp  testorthogonalviewport.h  testtoolswidget.cpp
knossos/tools/: configknossos.pyw
knossos/widgets/: commentswidget.cpp  datasetpropertywidget.h  documentationwidget.h  mainwindow.cpp  mainwindow.h  splashscreenwidget.cpp  tracingtimewidget.cpp  viewport.h  zoomandmultireswidget.h
knossos_cuber/: README.md  knossos_cuber.py  knossos_cuber.sublime-project  knossos_cuber_gui.py  knossos_cuber_widgets.ui  requirements.txt  setup.py
knossos_cuber/knossos_cuber/: config.ini  knossos_cuber.py  knossos_cuber_gui.py  knossos_cuber_widgets.py  setup.py  (+4 more)
mesh/: mesh.cpp  mesh.h  mesh_generation.cpp  mesh_generation.h  vtkMarchingCubesTriangleCases.h
openjpeg/: CMakeLists.txt  Makefile  bio.c  cio.c  convert.c  convert.h  dwt.c  image.c  j2k.c  jp2.c  mct.c  mqc.c  openjpeg.c  openjpeg.h  opj_apps_config.h  opj_clock.c  opj_config.h  opj_config_private.h  opj_decompress.c  opj_getopt.h  opj_includes.h  opj_intmath.h  opj_inttypes.h  pi.c  t1.c  t2.c  tcd.c  tgt.c
pointcloud/: pointcloud.cpp  pointcloud.h
pyqt/: .gitignore  CMakeLists.txt  test.py  testwidget.cpp  testwidget.h  testwidget.sip
python/: converter.py  logger.py  redirect.py
resources/: Info.plist  knossos.exe.manifest  knossos.rc  style.qss
scriptengine/: cwidget.cpp  highlighter.cpp  highlighter.h  scriptengine - Copy.pri  scriptengine.pri  scripting - Copy.cpp  scripting.cpp  scripting.h
segmentation/: cubeloader.cpp  cubeloader.h  segmentation.cpp  segmentation.h  segmentationsplit.cpp  segmentationsplit.h
skeleton/: NeuroLucida.cpp  NeuroLucida.h  node.cpp  node.h  property_query.cpp  property_query.h  segmentationSkeletonBridge.cpp  skeleton_dfs.cpp  skeleton_dfs.h  skeletonizer.cpp  skeletonizer.h  swc.cpp  swc.h  tree.cpp  tree.h
slicer/: dataset.h  gpucuber.cpp  gpucuber.h  loader.cpp  loader.h  remote.cpp  remote.h  viewer.cpp
test/: knossostestrunner.cpp  knossostestrunner.h  test.pri  testcommentswidget.cpp  testcommentswidget.h  testdatasavingwidget.cpp  testdatasavingwidget.h  testnavigationwidget.cpp  testnavigationwidget.h  testorthogonalviewport.cpp  testskeletonloadandsave.cpp  testskeletonloadandsave.h  testskeletonviewport.cpp  testskeletonviewport.h  testtoolswidget.cpp  testtoolswidget.h  testzoomandmultireswidget.cpp  testzoomandmultireswidget.h
tinyply/: tinyply.cpp  tinyply.h
tools/: Pmw.py  PmwBlt.py  PmwColor.py  RGBtoRGBA.c  configknossos.pyw  configknossos_ui.py  flatToNested.py  kconfig.py  kiki.py  nodetable.cpp  nodetable.h  randomIdOverlay.c  runknossos.pyw  runknossos_ui.py  simple-cubing.py  sktonewsk-CoordShift.py  sktonewsk.py  treetable.cpp  treetable.h  uniformOverlay.c
widgets/: DialogVisibilityNotify.h  GUIConstants.h  GuiConstants.h  PreventDeferredDelete.h  Spoiler.cpp  Spoiler.h  UserOrientableSplitter.cpp  UserOrientableSplitter.h  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  annotationwidget.cpp  annotationwidget.h  appearancewidget.cpp  appearancewidget.h  cheatsheet.cpp  cheatsheet.h  commentswidget.cpp  commentswidget.h  console.cpp  console.h  coordinatebarwidget.cpp  coordinatebarwidget.h  coordinateimportwidget.cpp  coordinateimportwidget.h  coordinatespins.cpp  coordinatespins.h  datasavingwidget.cpp  datasavingwidget.h  datasetbrowser.cpp  datasetbrowser.h  datasetloadtabwidget.cpp  datasetloadtabwidget.h  datasetloadwidget.cpp  datasetloadwidget.h  datasetoptionswidget.cpp  datasetoptionswidget.h  datasetpropertywidget.cpp  datasetpropertywidget.h  documentationwidget.cpp  (+43 more)
(+248 files in other folders)
